--- a/src/PokerSlide.css
+++ b/src/PokerSlide.css
@@ -2,7 +2,11 @@
   padding: 0;
   margin: 0;
 }
-
+.button {
+  width: 20rem;
+  height: 26rem;
+  background-color: aliceblue;
+}
 body {
   display: flex;
   justify-content: center;
@@ -42,7 +46,7 @@ body {
   z-index: 1000;
 }
 
-.poker1 {
+/* .poker1 {
   transform: rotate(-10deg);
 }
 
@@ -59,4 +63,4 @@ body {
 
 .poker5 {
   transform: rotate(6deg) translate(125%, -23%);
-}
+} */
